# machine-learning-notes

./: README.md  pyproject.toml
classical-learning/: README.md
classical-learning/unsupervised/clustering/: README.md  clustering_hugging_face.py  clustering_sentences.py  dbscan_clustering_copilot.py
classical-learning/unsupervised/clustering/dbscan/: README.md  dbscan_clustering_copilot.py  dbscan_clustering_copilot_attempt_1.py
classical-learning/unsupervised/clustering/k-means/: README.md  clustering_hugging_face.py  clustering_tokens.py
classical-learning/unsupervised/pattern-search/: README.md
classical-learning/unsupervised/pattern-search/apriori/: README.md  apriori_pattern_search.py
modern-supervised-learning/: README.md
reinforcement-learning/: README.md
