[tool.poetry]
name = "machine-learning-examples"
version = "0.1.0"
description = ""
authors = ["Masao Kitamura <masaok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
transformers = "^4.38.2"
scikit-learn = "^1.4.1.post1"
kneed = "^0.8.5"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
